--- a/AirPlayDeviceFInder/AirPlayDeviceFInder/UI Resources/Base.lproj/Main.storyboard
+++ b/AirPlayDeviceFInder/AirPlayDeviceFInder/UI Resources/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="singleLineEtched" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tZQ-QU-nfN">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="tZQ-QU-nfN">
                                 <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                                 <color key="backgroundColor" systemColor="systemGray6Color"/>
                                 <color key="separatorColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -105,19 +105,19 @@
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ge5-dT-ECL">
                                                             <rect key="frame" x="0.0" y="0.0" width="134.5" height="50.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="textColor" systemColor="systemBlueColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0AY-2U-0n3">
                                                             <rect key="frame" x="139.5" y="0.0" width="135" height="50.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="textColor" systemColor="systemBlueColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QJm-H1-bfI">
                                                             <rect key="frame" x="279.5" y="0.0" width="134.5" height="50.5"/>
                                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <color key="textColor" systemColor="systemBlueColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                     </subviews>
@@ -145,6 +145,12 @@
                                     <outlet property="delegate" destination="r0K-xd-0st" id="2vZ-NG-fA8"/>
                                 </connections>
                             </tableView>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No Devices Found." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dWJ-cH-Dmq">
+                                <rect key="frame" x="135.5" y="443" width="143.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="doZ-a8-76l"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -153,16 +159,98 @@
                             <constraint firstItem="tZQ-QU-nfN" firstAttribute="leading" secondItem="doZ-a8-76l" secondAttribute="leading" id="KuC-MM-VUJ"/>
                             <constraint firstItem="tZQ-QU-nfN" firstAttribute="top" secondItem="doZ-a8-76l" secondAttribute="top" id="PSe-e2-2UD"/>
                             <constraint firstItem="doZ-a8-76l" firstAttribute="bottom" secondItem="tZQ-QU-nfN" secondAttribute="bottom" id="VxY-TY-Rbx"/>
+                            <constraint firstItem="dWJ-cH-Dmq" firstAttribute="centerY" secondItem="doZ-a8-76l" secondAttribute="centerY" id="hQJ-hQ-hQ9"/>
+                            <constraint firstItem="dWJ-cH-Dmq" firstAttribute="centerX" secondItem="doZ-a8-76l" secondAttribute="centerX" id="xWl-Yk-Uow"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="wPr-Hj-Nfe"/>
                     <connections>
+                        <outlet property="noDataFoundLabel" destination="dWJ-cH-Dmq" id="Klb-kE-Ubc"/>
                         <outlet property="tableView" destination="tZQ-QU-nfN" id="Ndq-MZ-Sup"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rOL-SH-Z0F" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-820" y="-271"/>
+        </scene>
+        <!--Air Play Device Detail View Controller-->
+        <scene sceneID="3Va-xT-2nB">
+            <objects>
+                <viewController storyboardIdentifier="AirPlayDeviceDetailViewController" id="JDz-FR-dE8" customClass="AirPlayDeviceDetailViewController" customModule="AirPlayDeviceFInder" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="RSF-KZ-MDx">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TbH-8V-ttK">
+                                <rect key="frame" x="0.0" y="44" width="414" height="191"/>
+                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="32"/>
+                                <color key="textColor" systemColor="systemBlueColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="zob-xE-jUc">
+                                <rect key="frame" x="0.0" y="235" width="414" height="627"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="geoInfoCell" textLabel="6Nd-7r-5kP" detailTextLabel="1XT-hT-naf" rowHeight="45" style="IBUITableViewCellStyleValue1" id="9oo-Qm-Wi6">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="45"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9oo-Qm-Wi6" id="hfZ-S6-FEr">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="6Nd-7r-5kP">
+                                                    <rect key="frame" x="20" y="15" width="28" height="16"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1XT-hT-naf">
+                                                    <rect key="frame" x="357" y="15" width="37" height="16"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="JDz-FR-dE8" id="iuA-p6-7MR"/>
+                                    <outlet property="delegate" destination="JDz-FR-dE8" id="BU7-C8-4Ex"/>
+                                </connections>
+                            </tableView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" animating="YES" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="FQb-tN-h77">
+                                <rect key="frame" x="197" y="443" width="20" height="20"/>
+                                <color key="color" systemColor="systemBlueColor"/>
+                            </activityIndicatorView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="QXJ-RS-DI9"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QXJ-RS-DI9" firstAttribute="bottom" secondItem="zob-xE-jUc" secondAttribute="bottom" id="9CD-0h-tbl"/>
+                            <constraint firstItem="QXJ-RS-DI9" firstAttribute="trailing" secondItem="TbH-8V-ttK" secondAttribute="trailing" id="BCE-xu-bOd"/>
+                            <constraint firstItem="TbH-8V-ttK" firstAttribute="top" secondItem="QXJ-RS-DI9" secondAttribute="top" id="Dey-vq-Fh4"/>
+                            <constraint firstItem="zob-xE-jUc" firstAttribute="top" secondItem="TbH-8V-ttK" secondAttribute="bottom" id="dU3-15-tif"/>
+                            <constraint firstItem="FQb-tN-h77" firstAttribute="centerY" secondItem="QXJ-RS-DI9" secondAttribute="centerY" id="db9-HU-XTV"/>
+                            <constraint firstItem="zob-xE-jUc" firstAttribute="height" secondItem="RSF-KZ-MDx" secondAttribute="height" multiplier="0.7" id="etF-3O-PWu"/>
+                            <constraint firstItem="QXJ-RS-DI9" firstAttribute="trailing" secondItem="zob-xE-jUc" secondAttribute="trailing" id="lg7-dl-Hzp"/>
+                            <constraint firstItem="FQb-tN-h77" firstAttribute="centerX" secondItem="QXJ-RS-DI9" secondAttribute="centerX" id="red-q6-kCd"/>
+                            <constraint firstItem="TbH-8V-ttK" firstAttribute="leading" secondItem="QXJ-RS-DI9" secondAttribute="leading" id="sgT-nc-ZXa"/>
+                            <constraint firstItem="zob-xE-jUc" firstAttribute="leading" secondItem="QXJ-RS-DI9" secondAttribute="leading" id="zVM-eM-eoI"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="activityIndicator" destination="FQb-tN-h77" id="JXT-IA-Hde"/>
+                        <outlet property="ipAddressLabel" destination="TbH-8V-ttK" id="jUn-r4-2hl"/>
+                        <outlet property="tableView" destination="zob-xE-jUc" id="4Ia-kZ-BZf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HrP-aK-UVN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-429" y="-1099"/>
         </scene>
     </scenes>
     <resources>
@@ -172,6 +260,9 @@
         </systemColor>
         <systemColor name="systemBlueColor">
             <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGray5Color">
+            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
